<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_render"
            android:id="@+id/app_render"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_render"
            android:id="@+id/sdk_render"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_render_over_usb"
            android:id="@+id/sdk_render_over_usb"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
